Build Yoko using gradle